--- a/source_files/requirements.txt
+++ b/source_files/requirements.txt
@@ -7,16 +7,22 @@ click-plugins==1.1.1.2
 cligj==0.7.2
 cloudpickle==3.1.1
 configobj==5.0.9
+contourpy==1.3.2
+cycler==0.12.1
 dask==2025.7.0
 donfig==0.8.1.post1
+fonttools==4.59.0
 fsspec==2025.7.0
 h5py==3.14.0
+kiwisolver==1.4.8
 locket==1.0.0
+matplotlib==3.10.3
 netCDF4==1.7.2
 numpy==2.3.1
 packaging==25.0
 pandas==2.3.1
 partd==1.4.2
+pillow==11.3.0
 platformdirs==4.3.8
 pykdtree==1.4.2
 pyparsing==3.2.3
@@ -30,5 +36,6 @@ rioxarray==0.19.0
 shapely==2.1.1
 six==1.17.0
 toolz==1.0.0
+tqdm==4.67.1
 tzdata==2025.2
 xarray==2025.7.1
